--- a/pml.html
+++ b/pml.html
@@ -121,7 +121,7 @@ tr = trainSet[inTrain, ]
 cv = trainSet[-inTrain, ]
 mFit = train(classe ~ ., data = tr, method = mthd, verbose = FALSE)
 result &lt;- predict(mFit, cv)
-confusionMatrix(result, cv$classe)
+print(confusionMatrix(result, cv$classe))
 mFit
 }</code></pre>
 </div>
@@ -144,14 +144,56 @@ library(caret)</code></pre>
 <pre class="r"><code>library(gbm)</code></pre>
 <pre><code>## Loaded gbm 2.1</code></pre>
 <pre class="r"><code>print(paste0(&quot;start time: &quot;, date()))</code></pre>
-<pre><code>## [1] &quot;start time: Sun Jun 22 14:15:27 2014&quot;</code></pre>
-<pre class="r"><code>mFit = model(&quot;gbm&quot;, pmltrain)
-print(paste0(&quot;end time: &quot;, date()))</code></pre>
-<pre><code>## [1] &quot;end time: Sun Jun 22 14:55:09 2014&quot;</code></pre>
+<pre><code>## [1] &quot;start time: Sun Jun 22 16:55:29 2014&quot;</code></pre>
+<pre class="r"><code>mFit = model(&quot;gbm&quot;, pmltrain)</code></pre>
+<pre><code>## Confusion Matrix and Statistics
+## 
+##           Reference
+## Prediction    A    B    C    D    E
+##          A 1113   13    0    0    1
+##          B    3  734    1    3    4
+##          C    0   11  680    8    1
+##          D    0    1    1  631    8
+##          E    0    0    2    1  707
+## 
+## Overall Statistics
+##                                         
+##                Accuracy : 0.985         
+##                  95% CI : (0.981, 0.989)
+##     No Information Rate : 0.284         
+##     P-Value [Acc &gt; NIR] : &lt;2e-16        
+##                                         
+##                   Kappa : 0.981         
+##  Mcnemar's Test P-Value : NA            
+## 
+## Statistics by Class:
+## 
+##                      Class: A Class: B Class: C Class: D Class: E
+## Sensitivity             0.997    0.967    0.994    0.981    0.981
+## Specificity             0.995    0.997    0.994    0.997    0.999
+## Pos Pred Value          0.988    0.985    0.971    0.984    0.996
+## Neg Pred Value          0.999    0.992    0.999    0.996    0.996
+## Prevalence              0.284    0.193    0.174    0.164    0.184
+## Detection Rate          0.284    0.187    0.173    0.161    0.180
+## Detection Prevalence    0.287    0.190    0.178    0.163    0.181
+## Balanced Accuracy       0.996    0.982    0.994    0.989    0.990</code></pre>
+<pre class="r"><code>print(paste0(&quot;end time: &quot;, date()))</code></pre>
+<pre><code>## [1] &quot;end time: Sun Jun 22 17:35:34 2014&quot;</code></pre>
 <p>Here is the final answers, reportedly 100% accuracy rate on the final outcome.</p>
-<pre class="r"><code> print(predict(mFit, pmltest))</code></pre>
+<pre class="r"><code>result &lt;- predict(mFit, pmltest)
+print(result)</code></pre>
 <pre><code>##  [1] B A B A A E D B A A B C B A E E A B B B
 ## Levels: A B C D E</code></pre>
+<p>Finally write each test case’s result into a text file under answers folder for submission.</p>
+<pre class="r"><code>pml_write_files = function(x){
+  n = length(x)
+  for(i in 1:n){
+    filename = paste0(&quot;problem_id_&quot;,i,&quot;.txt&quot;)
+    write.table(x[i],file=filename,quote=FALSE,row.names=FALSE,col.names=FALSE)
+  }
+}
+setwd(&quot;~/CoursesR/Practical Machine Learning/answers&quot;)
+pml_write_files(result)</code></pre>
 </div>
 
 
